# website

./: .editorconfig  .eleventy.js  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  add.html  cli.nix  common.js  constants.sh  default.nix  deploy-preview.nix  devmode.nix  flake.nix  fmt.nix  generate_table_of_contents.sh  index.html  index.js  index.md  index.njk  lefthook.yml  mob.md  mob.njk  nci.nix  package-lock.json  package.json  server.sh  shell.example.nix  shell.nix  watch.sh
.github/workflows/: build.yml  ci.yml  deploy.yml  pr.yml
_data/: data.js  data.yaml  mobs.js  mobs.yaml
_includes/: base.njk  tailwindcss.njk
builder/: Cargo.toml
builder/src/: components.rs  constants.rs  expected_targets.rs  file_specs.rs  fonts.rs  google_font.rs  graphic_file_specs.rs  html.rs  lib.rs  main.rs  markdown.rs  mob.rs  pages.rs  path.rs  relative_path.rs  tailwind.rs  targets.rs
builder/src/components/: add_page.rs  calendar.rs  home_page.rs  mob_page.rs  page_base.rs
builder/src/components/calendar/: snippet.js
builder/src/components/mob_page/: status.rs
builder/src/components/schema/: node.rs  type_.rs
builder/src/components/schema/type_/: documentation.rs  ident.rs
builder/src/components/schema/type_/enum_/: variant.rs
builder/src/mob/: link.rs  status.rs  title.rs
builder/src/mob/participant/: person.rs
builder/src/mob/status/: legend.rs
builder/src/pages/: add.rs  index.rs
crates/builder/: Cargo.toml  default.nix
crates/builder/src/: components.rs  constants.rs  expected_files.rs  file_specs.rs  fonts.rs  google_font.rs  graphic_file_specs.rs  html.rs  main.rs  markdown.rs  mob.rs  pages.rs  style.rs  syn_helpers.rs  tailwind.rs  url.rs
crates/builder/src/components/: calendar.rs  mob_page.rs  page_base.rs  redirect_page.rs  schema.rs
crates/builder/src/components/schema/type_/: link.rs
crates/builder/src/components/schema/type_/field/: ident.rs
crates/builder/src/components/schema/type_/mapping/: key.rs
crates/builder/src/mob/: id.rs  recurring_session.rs  subtitle.rs
crates/builder/src/mob/status/: legend.rs
crates/builder/src/pages/: add.rs  index.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/reactive/: Cargo.toml
crates/reactive/src/driver/: child_process_killer.rs  notify.rs
crates/ssg-child/: Cargo.toml
crates/ssg-child/src/: disk_caching_http_client.rs  file_error.rs  lib.rs  sources.rs
crates/ssg-child/src/final_error/: missing_files.rs  processed_files_count.rs
crates/ssg-child/src/sources/: byte_array.rs  fs_path.rs  google_font.rs  static_byte_slice.rs
crates/ssg-parent/: Cargo.toml
crates/ssg-parent/src/: lib.rs
git_hooks/: pre-commit
input/: index.js
input/_includes/: base.njk
mobs/: agda_now.html  agda_now.yaml  bass.html  bass.yaml  liberty.yaml  love.html  love.yaml  malaga.html  malaga.yml  mob_explore.yaml  mob_more.yaml  mob_three.yaml  mobile_game_dev_fridays.html  mobile_game_dev_fridays.yaml  mobrpg.html  mobrpg.yaml  more.html  more.yaml  pangolin.html  pangolin.yaml  standard.html  standard.yaml
mobs/clarity/: data.yaml  description.md
mobs/denotational/: data.yaml  freeform_copy.md
mobs/liberty/: data.yaml  freeform_copy.md
mobs/mob_explore/: data.yaml  description.md
mobs/mob_loblaw/: data.yaml  description.md
mobs/mob_more/: data.yaml  description.md
mobs/mob_one/: data.yaml  freeform.md
mobs/mob_otter/: data.yaml  description.md
mobs/mob_real/: data.yaml  description.md
mobs/mob_three/: data.yaml  freeform.md
mobs/mob_zero/: data.yaml  description.md
mobs/mobrpg/: data.yaml  freeform_copy.md
mobs/more/: data.yaml  freeform_copy.md
mobs/pangolin/: data.yaml  freeform_copy.md
mobs/standard/: data.yaml  freeform_copy.md
reactive/: Cargo.toml
reactive/src/: driver.rs
reactive/src/driver/: command.rs  notify.rs  open_that.rs  println.rs
src/: assets.rs  calendar.rs  components.rs  constants.rs  environment.rs  events.rs  file_specs.rs  fonts.rs  graphic_assets.rs  graphic_file_specs.rs  html.rs  input.css  main.rs  markdown.rs  markdown_to_html.rs  mob.rs  mobs.rs  out.rs  page.rs  pages.rs  sections.rs  style.rs  syn_helpers.rs  tailwind.rs  url.rs
src/components/: add_page.rs  base_page.rs  calendar.rs  home_page.rs  mob_page.rs  page_base.rs
src/components/calendar/: snippet.js
src/components/schema/: ident.rs  node.rs  type_.rs
src/components/schema/type_/: documentation.rs  enum_.rs  field.rs  mapping.rs
src/components/schema/type_/enum_/: variant.rs
src/components/schema/type_/enum_/variant/: ident.rs
src/components/schema/type_/field/: ident.rs
src/components/schema/type_/mapping/: key.rs
src/mob/: file.rs  id.rs  link.rs  participant.rs  recurring_session.rs
src/mob/file/: yaml_recurring_session.rs
src/mob/participant/: person.rs
src/pages/: add.rs  calendar.js  calendar.rs  in_the_media.rs  index.rs  join.rs  mightyiam.rs  mobs-calendar.js  mobs_calendar.rs  publish.rs  why_mob.rs
src/sections/: in_the_media.rs  join.rs  main.rs  mightyiam.rs  mobs-calendar.js  mobs_calendar.rs  why_mob.rs
src/ssg/: disk_caching_http_client.rs  mod.rs
ssg/: Cargo.toml
ssg-child/: Cargo.toml
ssg-child/src/: disk_caching_http_client.rs  file_error.rs  file_msg.rs  file_spec.rs  file_success.rs  final_error.rs  generation_task.rs  lib.rs  sources.rs  target_error.rs  target_success.rs
ssg-child/src/final_error/: duplicates.rs  failed_files.rs  failed_targets.rs  missing_targets.rs  processed_targets_count.rs
ssg-child/src/sources/: bytes.rs  bytes_with_file_spec_safety.rs  google_font.rs  http.rs
ssg-parent/: Cargo.toml
ssg-parent/src/: dev.rs  lib.rs  parent.rs  rebuild_and_run.rs  server.rs
ssg-parent/src/dev/: app.rs
ssg-parent/src/dev/app/: state.rs
ssg/src/: disk_caching_http_client.rs  lib.rs  rebuild_and_run.rs  server.rs  sources.rs
ssg/src/sources/: bytes_with_file_spec_safety.rs  google_font.rs  http.rs
