[workspace]
resolver = "2"
members = [
  "crates/builder",
  "crates/cli",
  "crates/reactive",
  "crates/ssg-child",
  "crates/ssg-parent",
]
default-members = ["crates/cli"]

[workspace.dependencies]
reactive.path = "crates/reactive"
ssg-child.path = "crates/ssg-child"
ssg-parent.path = "crates/ssg-parent"
