[package]
name = "builder"
version = "0.0.0"
edition = "2021"

[features]
tokio_console = ["dep:console-subscriber"]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.6.1", features = ["serde"] }
comrak = "0.17.1"
console-subscriber = { version = "0.1.8", optional = true }
const_format = "0.2.30"
csscolorparser = { version = "0.6.0", features = ["serde"] }
custom_attrs = "1.6.0"
derive_more = "0.99.17"
futures = "0.3.24"
getset = "0.1.2"
global_counter = "0.2.2"
indexmap = "1.9.2"
itertools = "0.10.5"
maud = "0.24.0"
once_cell = "1.16.0"
rrule = { version = "0.10.0", features = ["serde"] }
schema = "0.1.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.11"
ssg-child = { version = "0.0.0", path = "../ssg-child" }
strum = { version = "0.24.1", features = ["derive"] }
syn = { version = "2.0.5", features = ["full"] }
thiserror = "1.0.40"
# TODO less features
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["fs", "sync"] }
url = "2.3.1"
