[package]
name = "ssg-child"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
camino = { version = "1.1.4", features = ["serde1"] }
derive_more = "0.99.17"
dirs = "5.0.1"
futures = "0.3.24"
getset = "0.1.2"
http-cache-reqwest = "0.5.0"
ipc-channel = { version = "0.17.0" }
lazy-regex = "2.5.0"
once_cell = "1.17.1"
readext = "0.1.0"
relative-path = { version = "1.9.0", features = ["serde"] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
reqwest-middleware = "0.2.0"
schemars = "0.8.15"
serde = { version = "1.0.189", features = ["derive"] }
task-local-extensions = "0.1.3"
thiserror = "1.0.38"
# TODO less features
tokio = { version = "1.21.0", features = ["fs", "tokio-macros", "full"] }
url = "2.3.1"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

