[package]
name = "ssg-parent"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
camino = "1.1.4"
colored = "2.0.0"
futures = "0.3.28"
live-server = "0.6.0"
once_cell = "1.17.1"
open = "4.1.0"
portpicker = "0.1.1"
reactive = { version = "0.1.0", path = "../reactive" }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.38"
# TODO less features
tokio = { version = "1.21.0", features = ["fs", "tokio-macros", "full"] }
url = "2.3.1"
