[package]
name = "ssg"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.64"
futures = "0.3.24"
http-cache-reqwest = "0.5.0"
readext = "0.1.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
reqwest-middleware = "0.2.0"
task-local-extensions = "0.1.3"
# TODO less features
tokio = { version = "1.21.0", features = ["fs", "tokio-macros", "full"] }
url = "2.3.1"
zip = "0.6.2"

