[dependencies]
anyhow = {version = "1.0.66", features = ["backtrace"]}
camino = "1.1.4"
chrono = {version = "0.4.19", features = ["serde"]}
chrono-tz = {version = "0.6.1", features = ["serde"]}
clap = {version = "4.1.4", features = ["derive"]}
comrak = "0.17.1"
console-subscriber = {version = "0.1.8", optional = true}
const_format = "0.2.30"
csscolorparser = {version = "0.6.0", features = ["serde"]}
custom_attrs = "1.6.0"
derive_more = "0.99.17"
futures = "0.3.28"
getset = "0.1.2"
global_counter = "0.2.2"
indexmap = "1.9.2"
itertools = "0.10.5"
maud = "0.24.0"
once_cell = "1.16.0"
relative-path = "1.8.0"
rrule = {version = "0.10.0", features = ["serde"]}
schema = "0.1.0"
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
serde_yaml = "0.9.11"
strum = {version = "0.24.1", features = ["derive"]}
syn = {version = "2.0.5", features = ["full"]}
thiserror = "1.0.40"
# TODO less features
tokio = {version = "1.21.0", features = ["full"]}
url = {version = "2.3.1", features = ["serde"]}
tempfile = "3.14.0"
ssg-child.workspace = true

[features]
tokio_console = ["dep:console-subscriber"]

[package]
name = "builder"
version = "0.0.0"
edition = "2021"
