[dependencies]
anyhow = {version = "1.0.66", features = ["backtrace"]}
camino = "1.1.4"
chrono = {version = "0.4.19", features = ["serde"]}
clap = {version = "4.1.4", features = ["derive"]}
console-subscriber = {version = "0.1.8", optional = true}
futures = "0.3.28"
indexmap = "1.9.2"
once_cell = "1.16.0"
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
thiserror = "1.0.40"
# TODO less features
tokio = {version = "1.21.0", features = ["full"]}
url = "2.3.1"
ssg-parent.workspace = true

[features]
tokio_console = ["dep:console-subscriber"]

[package]
name = "cli"
version = "0.0.0"
edition = "2021"
