[dependencies]
async-trait = "0.1.64"
camino = "1.1.4"
derive_more = "0.99.17"
dirs = "5.0.1"
futures = "0.3.24"
getset = "0.1.2"
lazy-regex = "2.5.0"
once_cell = "1.17.1"
readext = "0.1.0"
relative-path = "1.8.0"
task-local-extensions = "0.1.3"
thiserror = "1.0.38"
tokio = {version = "1.21.0", features = ["fs", "tokio-macros", "full"]}
url = "2.3.1"
zip = {version = "0.6.2", default-features = false, features = ["deflate"]}

[package]
name = "ssg-child"
version = "0.0.0"
edition = "2021"
